Fix alignment for 404 and login pages

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: column;
 }
-.page-content {
+
+app-login {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   flex-grow: 1;
 }
