--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -31,7 +31,12 @@
   padding: 2rem 0;
 }
 
-/*top right bottom left*/
+:host {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
+}
 
 .login__form__content {
   margin-bottom: 0.5rem;
