--- a/src/app/no-content/no-content.component.css
+++ b/src/app/no-content/no-content.component.css
@@ -30,3 +30,10 @@
   background-color: rgb(200, 200, 200);
   color: rgb(85, 107, 47)
 }
+
+:host {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
+}
